# magentic-ui

./: .gitignore  CONTRIBUTING.md  README.md  SUPPORT.md  TRANSPARENCY_NOTE.md  TROUBLESHOOTING.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: checks.yaml  codeql.yml  docker-build-push.yml
docs/tutorials/: web_agent_tutorial_full.ipynb
experiments/endpoint_configs/: .gitignore  config_template.yaml  test_client.py
experiments/eval/: README.md  analyze_sim_user.py  explore_results.py  plot_results.py  prepare_for_submission.py  run.py  sample_eval_systems.py  test_magentic_ui_system.py
experiments/eval/systems/: __init__.py  magentic_one_system.py  magentic_ui_sim_user_system.py  magentic_ui_system.py
frontend/: README.md  gatsby-config.ts  package.json  tailwind.config.js
frontend/src/components/: contentheader.tsx  footer.tsx  layout.tsx  settings.tsx  signin.tsx  store.tsx  utils.ts
frontend/src/components/common/: AutoResizeTextarea.tsx  Button.tsx  Icon.tsx  SubMenu.tsx  filerenderer.tsx  markdownrender.tsx
frontend/src/components/settings/: SettingsModal.tsx  types.ts  validation.ts
frontend/src/components/types/: datamodel.ts  plan.ts
frontend/src/components/views/: api.ts  atoms.tsx  magentic_ui_manager.tsx  manager.tsx  session_editor.tsx  sidebar.tsx  statusicon.tsx  types.ts
frontend/src/hooks/: provider.tsx
frontend/src/pages/: 404.tsx  index.tsx
frontend/src/styles/: global.css
samples/: README.md  cuawebsurfer_test.py  sample_azure_agent.py  sample_coder.py  sample_file_surfer.py  sample_web_surfer.py  task_centric_memory.py  test_coder.py  test_eval.py  test_file_surfer.py  web_surfer_test.py
src/magentic_ui/: __init__.py  _cli.py  _docker.py  approval_guard.py  guarded_action.py  input_func.py  magentic_ui_config.py  orchestrator_config.py  task_team.py  testing_asserts.py  testing_reports.py  testing_types.py  types.py  utils.py  version.py
src/magentic_ui/agents/: __init__.py  _coder.py  _user_proxy.py  _utils.py
src/magentic_ui/agents/file_surfer/: _browser_code_helpers.py  _code_markdown_file_browser.py  _file_surfer.py  _tool_definitions.py
src/magentic_ui/agents/mcp/: __init__.py  _agent.py  _config.py
src/magentic_ui/agents/users/: __init__.py  _dummy_user_proxy.py  _metadata_user_proxy.py
src/magentic_ui/agents/web_surfer/: __init__.py  _cua_web_surfer.py  _prompts.py  _set_of_mark.py  _tool_definitions.py  _web_surfer.py
src/magentic_ui/backend/: README.md  __init__.py  cli.py  version.py
src/magentic_ui/backend/database/: db_manager.py  schema_manager.py
src/magentic_ui/backend/datamodel/: __init__.py  db.py  types.py
src/magentic_ui/backend/teammanager/: teammanager.py
src/magentic_ui/backend/utils/: utils.py
src/magentic_ui/backend/web/: app.py  config.py  deps.py  initialization.py
src/magentic_ui/cli/: pretty_console.py
src/magentic_ui/docker/magentic-ui-browser-docker/: Dockerfile  build.sh  entrypoint.sh  openbox-rc.xml  package.json  playwright-server.js  start.sh  supervisord.conf  x11-setup.sh
src/magentic_ui/docker/magentic-ui-python-env/: Dockerfile  build.sh  requirements.txt
src/magentic_ui/eval/: README.md  basesystem.py  benchmark.py  core.py  evaluators.py  models.py  utils.py
src/magentic_ui/eval/benchmarks/: __init__.py  baseqa.py
src/magentic_ui/eval/systems/: __init__.py  example.py  llm_system.py
src/magentic_ui/learning/: __init__.py  learner.py  memory_provider.py
src/magentic_ui/teams/: __init__.py  roundrobin_orchestrator.py
src/magentic_ui/teams/orchestrator/: __init__.py  _group_chat.py  _orchestrator.py  _prompts.py  _utils.py  orchestrator_config.py
src/magentic_ui/tools/: __init__.py  bing_search.py  tool_metadata.py  url_status_manager.py
src/magentic_ui/tools/mcp/: __init__.py  _aggregate_workbench.py
src/magentic_ui/tools/playwright/: __init__.py  page_script.js  types.py  (+2 more)
src/magentic_ui/ui/: __init__.py  pretty_console.py
tests/: test_aggregate_mcp_workbench.py  test_magentic_ui_config_serialization.py  test_mcp_agent_integration.py  test_playwright_controller.py  test_playwright_state.py  test_url_status_manager.py
(+75 files in other folders)
